--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-particles": "^2.8.0"
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
