--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-reveal": "^1.2.2"
+    "react-elastic-carousel": "^0.11.5",
+    "react-reveal": "^1.2.2",
+    "react-slideshow-image": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
