--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.1.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "framer-motion": "^8.5.5",
     "gsap": "^3.11.4",
     "next": "13.1.3",
     "react": "18.2.0",
