--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-hotjar": "^5.4.1",
     "react-reveal": "^1.2.2",
     "react-slideshow-image": "^4.2.0"
   },
